# ITKBioCell

./: CMakeLists.txt  README.rst  itk-module.cmake  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: build-test-package.yml  clang-format-linter.yml
example/: CMakeLists.txt  CMakeListst.txt  CellularSegmentation1.cxx  CellularSegmentation2.cxx
examples/: CMakeLists.txt  CellularSegmentation1.cxx  CellularSegmentation2.cxx
include/: itkBioCell.h  itkBioCell.hxx  itkBioCellBase.h  itkBioCellularAggregate.h  itkBioCellularAggregate.hxx  itkBioCellularAggregateBase.h  itkBioGene.h  itkBioGeneNetwork.h  itkBioGenome.h
src/: CMakeLists.txt  itkBioCellBase.cxx  itkBioCellularAggregateBase.cxx  itkBioGene.cxx  itkBioGeneNetwork.cxx  itkBioGenome.cxx
test/: CMakeLists.txt  itkBioCellTest.cxx  itkBioCellularAggregateTest.cxx  itkBioGeneNetworkTest.cxx  itkBioGeneTest.cxx  itkBioGenomeTest.cxx
